deploy/base/apps/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: tracing-poc
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
