deploy/base/apps/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: tracing-poc
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - name: http
      port: 8080
      targetPort: http
