deploy/base/apps/shipping-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  namespace: tracing-poc
  labels:
    app: shipping-service
spec:
  selector:
    app: shipping-service
  ports:
    - name: http
      port: 8080
      targetPort: http
