deploy/base/apps/stock-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  namespace: tracing-poc
  labels:
    app: stock-service
spec:
  selector:
    app: stock-service
  ports:
    - name: http
      port: 8080
      targetPort: http
